[package]
name = "font-metrics-extractor"
version = "0.1.0"
authors = ["Roman Petrenko <roman@canva.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skia-safe = "0.39.1"
skia-bindings = "0.39.1"
mozjpeg = "0.8.24"