[package]
name = "font-metrics-extractor"
version = "0.1.0"
authors = ["Roman Petrenko <roman@canva.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skia-safe = { git = "https://github.com/StewartCanva/rust-skia", rev = "826d16ae668a6e6dc20ad70c4794040d4c42a8da" }
